# microcyphal

./: .envrc  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  debug_constructor  debug_constructor.cpp  debug_detailed  debug_detailed.cpp  debug_fixed  debug_fixed.cpp  debug_fresh_span  debug_fresh_span.cpp  debug_serialization  debug_serialization.cpp  gordion.yaml  noxfile.py
cmake/: add_microcyphal_library.cmake  utilities.cmake
cmake/native/: platform.cmake  subdirectories.cmake  toolchain.cmake
firmware/: CMakeLists.txt
firmware/include/c/uavcan/node/: ExecuteCommand_1_1.h  Health_1_0.h  ID_1_0.h  Mode_1_0.h
firmware/include/c/uavcan/node/port/: SubjectID_1_0.h
firmware/include/cpp14/nunavut/support/: serialization.hpp
firmware/include/cpp14/uavcan/_register/: Access_1_0.hpp  List_1_0.hpp  Name_1_0.hpp  Value_1_0.hpp
firmware/include/cpp14/uavcan/file/: Path_2_0.hpp
firmware/include/cpp14/uavcan/node/: ExecuteCommand_1_1.hpp  GetInfo_1_0.hpp  Health_1_0.hpp  Heartbeat_1_0.hpp  ID_1_0.hpp  Mode_1_0.hpp  Version_1_0.hpp
firmware/include/cpp14/uavcan/node/port/: List_1_0.hpp  ServiceIDList_1_0.hpp  ServiceID_1_0.hpp  SubjectIDList_1_0.hpp  SubjectID_1_0.hpp
firmware/include/cpp14/uavcan/pnp/: NodeIDAllocationData_2_0.hpp
firmware/include/cpp14/uavcan/primitive/: Empty_1_0.hpp  String_1_0.hpp  Unstructured_1_0.hpp
firmware/include/cpp14/uavcan/primitive/array/: Bit_1_0.hpp  Integer16_1_0.hpp  Integer32_1_0.hpp  Integer64_1_0.hpp  Integer8_1_0.hpp  Natural16_1_0.hpp  Natural32_1_0.hpp  Natural64_1_0.hpp  Natural8_1_0.hpp  Real16_1_0.hpp  Real32_1_0.hpp  Real64_1_0.hpp
firmware/include/cpp14/uavcan/time/: SynchronizedTimestamp_1_0.hpp
firmware/include/cpp17/nunavut/support/: serialization.hpp
firmware/include/cpp17/uavcan/_register/: Access_1_0.hpp  List_1_0.hpp  Name_1_0.hpp  Value_1_0.hpp
firmware/include/cpp17/uavcan/file/: Path_2_0.hpp
firmware/include/cpp17/uavcan/node/: ExecuteCommand_1_1.hpp  GetInfo_1_0.hpp  Health_1_0.hpp  Heartbeat_1_0.hpp  ID_1_0.hpp  Mode_1_0.hpp  Version_1_0.hpp
firmware/include/cpp17/uavcan/node/port/: List_1_0.hpp  ServiceIDList_1_0.hpp  ServiceID_1_0.hpp  SubjectIDList_1_0.hpp  SubjectID_1_0.hpp
firmware/include/cpp17/uavcan/pnp/: NodeIDAllocationData_2_0.hpp
firmware/include/cpp17/uavcan/primitive/: Empty_1_0.hpp  String_1_0.hpp  Unstructured_1_0.hpp
firmware/include/cpp17/uavcan/primitive/array/: Bit_1_0.hpp  Integer16_1_0.hpp  Integer32_1_0.hpp  Integer64_1_0.hpp  Integer8_1_0.hpp  Natural16_1_0.hpp  Natural32_1_0.hpp  Natural64_1_0.hpp  Natural8_1_0.hpp  Real16_1_0.hpp  Real32_1_0.hpp  Real64_1_0.hpp
firmware/include/cpp17/uavcan/time/: SynchronizedTimestamp_1_0.hpp
firmware/include/cyphal/: bump_pool_allocator.hpp  byte_order.hpp  frame.hpp  pool_map.hpp  publisher.hpp  udp_frame.hpp  udp_payload.hpp  udp_publisher.hpp  udp_subscriber.hpp  udp_transport.hpp
firmware/include/nunavut/support/: serialization.h
firmware/include/uavcan/node/: GetInfo_1_0.h  Heartbeat_1_0.h  Version_1_0.h
firmware/include/uavcan/node/port/: List_1_0.h  ServiceIDList_1_0.h  ServiceID_1_0.h  SubjectIDList_1_0.h
scripts/package/: pyproject.in.toml  pyproject.toml  rip.py
scripts/package/microcyphal/: __init__.py
scripts/package/mimxrt1170evk/: __init__.py  application.py  core0_flasher.py  ctest.py  debugger.py
test/native/: CMakeLists.txt  hello_publisher.cpp  hello_subscriber.cpp  hello_world.cpp  ut_publisher.cpp  ut_serialization.cpp  ut_simple.cpp  ut_subscriber.cpp  ut_udp_frame.cpp
