[tool.poetry]
name = "microcyphal"
version = "0.1.0"
description = ""
authors = ["Jacob Heathorn <jacob.heathorn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
forge = { path = "/home/jacob/embedded/nxp/forge/scripts/package", develop = true }
nunavut = { path = "/home/jacob/embedded/nxp/nunavut", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
