[project]
name = "microcyphal"
version = "0.1.0"
description = ""
authors = [{name = "Jacob Heathorn", email = "jacob.heathorn@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "forge",
]

[tool.pytest.ini_options]
cache_dir = "../../.pycache"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
